@@ -9,7 +9,7 @@ import java.util.Map;
 import java.util.Queue;
 import java.util.stream.Collectors;
 
-public class Actions implements IAction{
+public class Actions implements IAction {
     @Override
     public void traiterMaladie(Partie partie,Partie1Joueur partie1Joueur, CouleursMaladie couleurMaladie) {
         // pas remède → -1 d'une couleur
@@ -23,45 +23,46 @@ public class Actions implements IAction{
                 CouleursMaladie.ROUGE,TypeRemede.REMEDE_ROUGE
         ));
         if(partie.getPlateau().getLesRemedesActif().contains(correspondanceCouleur.get(couleurMaladie)) || partie1Joueur.getTypeRole().equals(TypeRole.MEDECIN) ){
-            partie1Joueur.getPosition().getCube().replace(couleurMaladie, 0);
+            partie1Joueur.getPosition().getCube().replace(couleurMaladie.toString(), 0);
         }else if(!partie.getPlateau().getLesRemedesActif().contains(correspondanceCouleur.get(couleurMaladie))){
-            partie1Joueur.getPosition().getCube().replace(couleurMaladie,partie1Joueur.getPosition().getCube().get(couleurMaladie)-1);
+            partie1Joueur.getPosition().getCube().replace(couleurMaladie.toString(),partie1Joueur.getPosition().getCube().get(couleurMaladie.toString())-1);
         }
     }
 
-    //modification le 02/04/2023
     @Override
     public void construireStationRecherche(Partie partie,Partie1Joueur partie1Joueur) throws CentreRechercheDejaExistantException, NombreMaxCentreRechercheAtteintException, AbsenceCarteJoueurException {
         if(partie.getPlateau().getLesStationsDeRecherche().size()>5) throw new NombreMaxCentreRechercheAtteintException();
-        if(partie1Joueur.getCartes_en_main().stream().noneMatch(Carte -> Carte.getInformation().equals(partie1Joueur.getPosition().getNomVille()))) throw new AbsenceCarteJoueurException();
-        if(partie1Joueur.getPosition().getaUnCentreDeRecherche()) throw new CentreRechercheDejaExistantException();
-        partie1Joueur.getPosition().setaUnCentreDeRecherche(true);
-        Carte uneCarte = partie1Joueur.getCartes_en_main().stream().filter(carte -> carte.getInformation().equals(partie1Joueur.getPosition().getNomVille())).toList().get(0);
+        if(partie1Joueur.getCartesEnMain().stream().noneMatch(Carte -> Carte.getNomCarte().equals(partie1Joueur.getPosition().getNomVille()))) throw new AbsenceCarteJoueurException();
+        if(partie1Joueur.getPosition().getAUnCentreDeRecherche()) throw new CentreRechercheDejaExistantException();
+        partie1Joueur.getPosition().setAUnCentreDeRecherche(true);
+        Carte uneCarte = partie1Joueur.getCartesEnMain().stream().filter(carte -> carte.getNomCarte().equals(partie1Joueur.getPosition().getNomVille())).toList().get(0);
         if (!partie1Joueur.getTypeRole().equals(TypeRole.EXPERT_AUX_OPERATIONS)){
-            partie1Joueur.getCartes_en_main().remove(uneCarte);
+            partie1Joueur.getCartesEnMain().remove(uneCarte);
             partie.getPlateau().getDefausse_cartesJoueur().add(uneCarte);
         }
-
     }
 
     @Override
     public void deplacerStationRecherche(Partie1Joueur partie1Joueur, Ville ville) throws CentreRechercheDejaExistantException, CentreRechercheInexistantException, VilleIdentiqueException {
         if(partie1Joueur.getPosition().equals(ville)) throw new VilleIdentiqueException();
-        if(partie1Joueur.getPosition().getaUnCentreDeRecherche()) throw new CentreRechercheDejaExistantException();
-        if(!ville.getaUnCentreDeRecherche()) throw new CentreRechercheInexistantException();
-        ville.setaUnCentreDeRecherche(false);
-        partie1Joueur.getPosition().setaUnCentreDeRecherche(true);
+        if(partie1Joueur.getPosition().getAUnCentreDeRecherche()) throw new CentreRechercheDejaExistantException();
+        if(!ville.getAUnCentreDeRecherche()) throw new CentreRechercheInexistantException();
+        ville.setAUnCentreDeRecherche(false);
+        partie1Joueur.getPosition().setAUnCentreDeRecherche(true);
     }
 
     @Override
     public void decouvrirRemede(Partie partie,Partie1Joueur partie1Joueur) throws CentreRechercheInexistantException {
-        if(!partie1Joueur.getPosition().getaUnCentreDeRecherche()) throw new CentreRechercheInexistantException();
+        if(!partie1Joueur.getPosition().getAUnCentreDeRecherche()) throw new CentreRechercheInexistantException();
 
-        List<Carte> cartesMainJoueur = partie1Joueur.getCartes_en_main().stream().filter(carte -> carte.getInformation().equals(partie1Joueur.getPosition().getNomVille())).collect(Collectors.toList());
-        int jaune = 0,rouge = 0,bleu = 0, noir = 0;
+        List<Carte> cartesMainJoueur = partie1Joueur.getCartesEnMain().stream().filter(carte -> carte.getNomCarte().equals(partie1Joueur.getPosition().getNomVille())).toList();
+        int jaune = 0;
+        int rouge = 0;
+        int bleu = 0;
+        int noir = 0;
         for(Carte carte : cartesMainJoueur){
             for(Ville ville : partie.getPlateau().getLesVilles()){
-                if(ville.getNomVille()==carte.getInformation()){
+                if(ville.getNomVille().equals(carte.getNomCarte())){
                     if(ville.getMaladie().equals(CouleursMaladie.JAUNE)) {jaune++;}
                     if(ville.getMaladie().equals(CouleursMaladie.ROUGE)) {rouge++;}
                     if(ville.getMaladie().equals(CouleursMaladie.BLEU)) {bleu++;}
@@ -85,26 +86,26 @@ public class Actions implements IAction{
     @Override
     public void piocherCarte(Partie1Joueur partie1Joueur, List<Carte> cartesJoueurList) throws CartesJoueurInsuffisantes, NombreCarteDepasseException {
         if(cartesJoueurList.size()<2) throw new CartesJoueurInsuffisantes(); // activer fin de partie
-        if(partie1Joueur.getCartes_en_main().size()>5) throw new NombreCarteDepasseException();// ajouter l'option défausser carte
-        partie1Joueur.getCartes_en_main().add(cartesJoueurList.get(cartesJoueurList.size()-1));
+        if(partie1Joueur.getCartesEnMain().size()>5) throw new NombreCarteDepasseException();// ajouter l'option défausser carte
+        partie1Joueur.getCartesEnMain().add(cartesJoueurList.get(cartesJoueurList.size()-1));
         cartesJoueurList.remove(cartesJoueurList.size()-1);
-        partie1Joueur.getCartes_en_main().add(cartesJoueurList.get(cartesJoueurList.size()-1));
+        partie1Joueur.getCartesEnMain().add(cartesJoueurList.get(cartesJoueurList.size()-1));
         cartesJoueurList.remove(cartesJoueurList.size()-1);
     }
 
     @Override
     public void echangerCarte(Partie1Joueur joueurDonneur, Partie1Joueur joueurReceveur, Carte carte) throws NombreCarteDepasseException, AbsenceCarteJoueurException, PositionJoueursDifferenteExceptions, CarteVilleDifferentePositionJoueur {
-        if(!joueurDonneur.getCartes_en_main().contains(carte)) throw new AbsenceCarteJoueurException();
+        if(!joueurDonneur.getCartesEnMain().contains(carte)) throw new AbsenceCarteJoueurException();
         if(!joueurDonneur.getPosition().equals(joueurReceveur.getPosition())) throw new PositionJoueursDifferenteExceptions();
-        if(joueurReceveur.getCartes_en_main().size()==7) throw new NombreCarteDepasseException();
+        if(joueurReceveur.getCartesEnMain().size()==7) throw new NombreCarteDepasseException();
 
         if(!joueurDonneur.getTypeRole().equals(TypeRole.CHERCHEUSE)) {
-            joueurReceveur.getCartes_en_main().add(carte);
-            joueurDonneur.getCartes_en_main().remove(carte);
+            joueurReceveur.getCartesEnMain().add(carte);
+            joueurDonneur.getCartesEnMain().remove(carte);
         }else {
-            if(!joueurDonneur.getPosition().equals(carte.getInformation()))throw new CarteVilleDifferentePositionJoueur();
-            joueurReceveur.getCartes_en_main().add(carte);
-            joueurDonneur.getCartes_en_main().remove(carte);
+            if(!joueurDonneur.getPosition().getNomVille().equals(carte.getNomCarte()))throw new CarteVilleDifferentePositionJoueur();
+            joueurReceveur.getCartesEnMain().add(carte);
+            joueurDonneur.getCartesEnMain().remove(carte);
         }
     }
 
@@ -112,53 +113,42 @@ public class Actions implements IAction{
     @Override
     public void retireCubeAutomatiquement(Partie1Joueur partie1Joueur, Ville ville, CouleursMaladie couleursMaladie) throws ActionNotAutorizedException {
         // Medeçin : si maladie guérie, retirer tous les cubes correspondants et bloquer les nouveaux cubes d'une maladie guérie (dans une autre méthode)
-        if(!partie1Joueur.getTypeRole().equals(TypeRole.MEDECIN)) throw new ActionNotAutorizedException();
+        if(!partie1Joueur.getTypeRole().equals(TypeRole.MEDECIN)) throw new ActionNotAutorizedException("");
 
     }
 
     // Cartes évènements
 
-    // fini
     @Override
     public void subventionPublique(Partie partie,Partie1Joueur partie1Joueur, Ville ville) throws CentreRechercheDejaExistantException, NombreMaxCentreRechercheAtteintException {
-        if(ville.getaUnCentreDeRecherche())  throw new CentreRechercheDejaExistantException();
+        if(ville.getAUnCentreDeRecherche())  throw new CentreRechercheDejaExistantException();
         if(partie.getPlateau().getLesStationsDeRecherche().size()>5) throw new NombreMaxCentreRechercheAtteintException();
-        ville.setaUnCentreDeRecherche(true);
+        ville.setAUnCentreDeRecherche(true);
         partie.getPlateau().getLesStationsDeRecherche().add(ville);
     }
 
-    // fini
     @Override
     public void parUneNuitTranquille(Plateau plateau) {
         plateau.setParUneNuitTranquille(true);
     }
 
-    // Fini
     @Override
     public void populationResiliente(Carte choix, Plateau plateau) throws  ActionNotAutorizedException {
-        if(!plateau.getDefausse_carteDePropagation().contains(choix)) throw new ActionNotAutorizedException();
-        if(plateau.getEtatEpidemie()!=EtatEpidemie.INFECTION ||plateau.getEtatEpidemie()!=EtatEpidemie.INTENSIFICATION ) throw new ActionNotAutorizedException();
+        if(!plateau.getDefausse_carteDePropagation().contains(choix)) throw new ActionNotAutorizedException("");
+        if(plateau.getEtatEpidemie()!=EtatEpidemie.INFECTION ||plateau.getEtatEpidemie()!=EtatEpidemie.INTENSIFICATION ) throw new ActionNotAutorizedException("");
         plateau.getDefausse_carteDePropagation().remove(choix);
     }
 
-
-    //fini   le rôle du répartiteur est fait
     @Override
     public void deplacerUnPionQuelqconque(Partie1Joueur joueurDeplace,Partie1Joueur joueurADeplacer, Ville ville) throws ActionNotAutorizedException {
-        if(joueurADeplacer.getAutorisationDeplacementPion()) throw  new ActionNotAutorizedException();
-        if(!joueurDeplace.getTypeRole().equals(TypeRole.REPARTITEUR)) throw new ActionNotAutorizedException();
+        if(joueurADeplacer.isAutorisationDeplacementPion()) throw  new ActionNotAutorizedException("");
+        if(!joueurDeplace.getTypeRole().equals(TypeRole.REPARTITEUR)) throw new ActionNotAutorizedException("");
         joueurADeplacer.setPosition(ville);
         joueurADeplacer.setAutorisationDeplacementPion(false);
     }
 
-    // a revoir
     @Override
     public void prevention(Plateau plateau) {
-        List<Carte> cartesPropagations=plateau.getCartesPropagation();
-        Queue<Carte> cartesPropagation;
-        for (Carte carte:cartesPropagations) {
-            System.out.println();// ???
-        }
+        System.out.println();
     }
-
 }
